--- a/index.html
+++ b/index.html
@@ -261,12 +261,14 @@
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i class="fas fa-gifts"></i></div>
+              We belive that a single action can make a defference in the community, and that cillective action can greatly impact the world.
               <!-- <h4 class="title"><a href="">Nemo Enim</a></h4> -->
               <!-- <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="fas fa-mug-hot"></i></div>
+              Through advocacy and outreach activities, our teams works tirelessly each day to contribute their part to the greater good:)
               <!-- <h4 class="title"><a href="">Dine Pad</a></h4> -->
               <!-- <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p> -->
             </div>
